[gd_scene load_steps=35 format=3 uid="uid://d3cq3b5o0feo0"]

[ext_resource type="Theme" uid="uid://dqhnc02ffxjr2" path="res://Theme.tres" id="1_vq4js"]
[ext_resource type="Script" path="res://main.gd" id="2_jo8ih"]
[ext_resource type="PackedScene" uid="uid://dyp7ll8oa0ey2" path="res://Scenes/PathTab/path_tab.tscn" id="3_ujiel"]
[ext_resource type="PackedScene" uid="uid://b21w1uepu2r7m" path="res://Scenes/PositionControls/position_controls.tscn" id="5_d77dx"]
[ext_resource type="PackedScene" uid="uid://ddow231ohkcpj" path="res://Scenes/LoopControls/loop_controls.tscn" id="6_lyd1h"]
[ext_resource type="Texture2D" uid="uid://bssf5wkfubmdu" path="res://Textures/PauseLarge.svg" id="13_uh3br"]
[ext_resource type="Script" path="res://Scripts/action_panel.gd" id="14_38rqh"]
[ext_resource type="Texture2D" uid="uid://dkpllak4evknm" path="res://Textures/Play.svg" id="15_p5801"]
[ext_resource type="Texture2D" uid="uid://dcx71x8114vuv" path="res://Textures/Selection.svg" id="16_32t78"]
[ext_resource type="Texture2D" uid="uid://fxyub7xy8ha5" path="res://Textures/Pause.svg" id="17_u07ej"]
[ext_resource type="Texture2D" uid="uid://dd4yrbph2jgxm" path="res://Textures/Speed.svg" id="18_b0x4r"]
[ext_resource type="Texture2D" uid="uid://df1fg8fsnax6k" path="res://Textures/Range.svg" id="19_3upt7"]
[ext_resource type="PackedScene" uid="uid://cphap3q53w4vh" path="res://Scenes/SpeedPanel/speed_panel.tscn" id="19_naxa0"]
[ext_resource type="Texture2D" uid="uid://biyi8wy11rxn2" path="res://Textures/Menu.svg" id="20_fglpl"]
[ext_resource type="Script" path="res://Scripts/circle_selection.gd" id="21_j8sxo"]
[ext_resource type="Texture2D" uid="uid://8r6wnojlpyb2" path="res://Textures/Circle Selection.svg" id="22_vxc6i"]
[ext_resource type="Texture2D" uid="uid://ceigu0byvwpor" path="res://Textures/Play Large.svg" id="23_br8ur"]
[ext_resource type="Texture2D" uid="uid://dtor82hfkxpes" path="res://Textures/Restart Large.svg" id="24_kxq4c"]
[ext_resource type="PackedScene" uid="uid://bay00h3vqieoe" path="res://Scenes/RangePanel/range_panel.tscn" id="24_syqfr"]
[ext_resource type="Texture2D" uid="uid://ceniqb8fv6rr" path="res://Textures/hourglass.svg" id="25_kpo0t"]
[ext_resource type="PackedScene" uid="uid://dmrgpg8cq51la" path="res://Scenes/Menu/menu.tscn" id="25_wacs8"]
[ext_resource type="Script" path="res://Scenes/Menu/Menu.gd" id="26_30k7n"]
[ext_resource type="Texture2D" uid="uid://btmbmu74nqhry" path="res://Textures/Back.svg" id="27_62j01"]
[ext_resource type="Script" path="res://Scripts/settings.gd" id="41_m8wy6"]
[ext_resource type="Script" path="res://Scripts/add_file.gd" id="42_p7l1i"]
[ext_resource type="Script" path="res://Scenes/WifiIcon/wifi_icon.gd" id="42_yfho7"]
[ext_resource type="Script" path="res://Scripts/file_list.gd" id="43_ypxlb"]
[ext_resource type="Script" path="res://Scripts/scroll_item.gd" id="44_rs8f6"]
[ext_resource type="Texture2D" uid="uid://c0bgeto1j6das" path="res://Textures/wifi.svg" id="45_jo84y"]
[ext_resource type="Script" path="res://Scripts/connecting_label.gd" id="45_ndop1"]
[ext_resource type="Script" path="res://Scripts/splash.gd" id="46_kew6m"]

[sub_resource type="Animation" id="Animation_il416"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Circle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7gpwe"]
resource_name = "Spin"
length = 90.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Circle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 90),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5ydg"]
_data = {
"RESET": SubResource("Animation_il416"),
"Spin": SubResource("Animation_7gpwe")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vq4js")
script = ExtResource("2_jo8ih")

[node name="PathTab" parent="." instance=ExtResource("3_ujiel")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="PositionControls" parent="." instance=ExtResource("5_d77dx")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="LoopControls" parent="." instance=ExtResource("6_lyd1h")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ActionPanel" type="Panel" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.67451)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -194.0
offset_right = 541.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("14_38rqh")

[node name="Play" type="TextureRect" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 78.0
offset_top = -47.5
offset_right = 152.0
offset_bottom = 47.5
grow_vertical = 2
texture = ExtResource("15_p5801")

[node name="Selection" type="TextureRect" parent="ActionPanel/Play"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -90.0
offset_right = 83.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("16_32t78")

[node name="Button" type="TextureButton" parent="ActionPanel/Play"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.783784
anchor_top = -0.442105
anchor_right = 1.60811
anchor_bottom = 1.44211
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Pause" type="TextureRect" parent="ActionPanel"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 86.0
offset_top = -40.5
offset_right = 133.0
offset_bottom = 40.5
grow_vertical = 2
texture = ExtResource("17_u07ej")

[node name="Selection" type="TextureRect" parent="ActionPanel/Pause"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -90.0
offset_right = 89.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("16_32t78")

[node name="Button" type="TextureButton" parent="ActionPanel/Pause"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.40426
anchor_top = -0.592593
anchor_right = 2.38298
anchor_bottom = 1.59259
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Speed" type="TextureRect" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 289.0
offset_top = -52.0
offset_right = 469.0
offset_bottom = 53.0
grow_vertical = 2
texture = ExtResource("18_b0x4r")

[node name="Selection" type="TextureRect" parent="ActionPanel/Speed"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("16_32t78")

[node name="Button" type="TextureButton" parent="ActionPanel/Speed"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.352381
anchor_right = 1.0
anchor_bottom = 1.35238
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Range" type="TextureRect" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -27.0
offset_right = -301.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("19_3upt7")

[node name="Selection" type="TextureRect" parent="ActionPanel/Range"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -61.5
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("16_32t78")

[node name="Button" type="TextureButton" parent="ActionPanel/Range"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.07018
anchor_right = 1.0
anchor_bottom = 2.08772
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Menu" type="TextureRect" parent="ActionPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -51.0
offset_right = -60.0
offset_bottom = 51.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("20_fglpl")

[node name="Selection" type="TextureRect" parent="ActionPanel/Menu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("16_32t78")

[node name="Button" type="TextureButton" parent="ActionPanel/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.362745
anchor_top = -0.362745
anchor_right = 1.36275
anchor_bottom = 1.36275
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="ActionPanel"]
wait_time = 0.8
one_shot = true

[node name="CircleSelection" type="Control" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.313726)
layout_mode = 1
anchor_left = 0.244444
anchor_top = 0.305729
anchor_right = 0.755556
anchor_bottom = 0.593229
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("21_j8sxo")
metadata/_edit_use_anchors_ = true

[node name="Circle" type="TextureRect" parent="CircleSelection"]
self_modulate = Color(1, 1, 1, 0.666667)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -258.0
offset_right = 258.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(258, 258)
texture = ExtResource("22_vxc6i")

[node name="Pause" type="TextureRect" parent="CircleSelection"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -121.5
offset_right = 73.5
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_uh3br")

[node name="Play" type="TextureRect" parent="CircleSelection"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.360507
anchor_top = 0.271739
anchor_right = 0.719203
anchor_bottom = 0.728261
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_br8ur")
metadata/_edit_use_anchors_ = true

[node name="Restart" type="TextureButton" parent="CircleSelection"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -188.5
offset_right = 147.0
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("24_kxq4c")
stretch_mode = 3

[node name="Hourglass" type="TextureRect" parent="CircleSelection"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -154.0
offset_right = 125.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("25_kpo0t")
stretch_mode = 3

[node name="HomingLabel" type="Label" parent="CircleSelection/Hourglass"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -273.5
offset_top = -363.0
offset_right = 273.5
offset_bottom = -118.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 88
text = "SYNCING
PLEASE WAIT"
horizontal_alignment = 1

[node name="OutsideButton" type="TextureButton" parent="CircleSelection"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.478261
anchor_top = -1.06341
anchor_right = 1.47826
anchor_bottom = 2.06341
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="InsideButton" type="TextureButton" parent="CircleSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CircleSelection"]
libraries = {
"": SubResource("AnimationLibrary_u5ydg")
}

[node name="SpeedPanel" parent="." instance=ExtResource("19_naxa0")]
unique_name_in_owner = true
layout_mode = 1
anchor_left = -0.50037
anchor_bottom = 1.00446
offset_left = 0.400024
offset_bottom = -8.55994
grow_vertical = 1

[node name="RangePanel" parent="." instance=ExtResource("24_syqfr")]
unique_name_in_owner = true
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[node name="Menu" parent="." instance=ExtResource("25_wacs8")]
unique_name_in_owner = true
visible = false
layout_mode = 1
script = ExtResource("26_30k7n")

[node name="SettingsPage" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.364706, 0.364706, 0.364706, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("41_m8wy6")

[node name="Back" type="TextureButton" parent="SettingsPage"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0675926
anchor_top = 0.0223958
anchor_right = 0.199074
anchor_bottom = 0.0932292
grow_horizontal = 2
texture_normal = ExtResource("27_62j01")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Network" type="VBoxContainer" parent="SettingsPage"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -723.0
offset_bottom = -431.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Address" type="VBoxContainer" parent="SettingsPage/Network"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPage/Network/Address"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "WebSocket Server Address:"

[node name="TextEdit" type="TextEdit" parent="SettingsPage/Network/Address"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 54
placeholder_text = "192.168.254..."

[node name="Port" type="VBoxContainer" parent="SettingsPage/Network"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPage/Network/Port"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Port:"

[node name="TextEdit" type="TextEdit" parent="SettingsPage/Network/Port"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "120"
placeholder_text = "120"

[node name="Connect" type="Button" parent="SettingsPage/Network"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Connect To Server"

[node name="Status" type="Label" parent="SettingsPage/Network"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "CONNECTED"

[node name="ConnectionTimeout" type="Timer" parent="SettingsPage/Network"]
wait_time = 3.0
one_shot = true

[node name="Sliders" type="VBoxContainer" parent="SettingsPage"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -321.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MaxSpeed" type="VBoxContainer" parent="SettingsPage/Sliders"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPage/Sliders/MaxSpeed"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Speed Slider Max:"

[node name="TextEdit" type="TextEdit" parent="SettingsPage/Sliders/MaxSpeed"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "25000"
placeholder_text = "25000"

[node name="MaxAcceleration" type="VBoxContainer" parent="SettingsPage/Sliders"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPage/Sliders/MaxAcceleration"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Acceleration Slider Max:"

[node name="TextEdit" type="TextEdit" parent="SettingsPage/Sliders/MaxAcceleration"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "500000"
placeholder_text = "500000"

[node name="HomingSpeed" type="VBoxContainer" parent="SettingsPage"]
layout_mode = 2
offset_top = 1120.0
offset_right = 1080.0
offset_bottom = 1288.0

[node name="Label" type="Label" parent="SettingsPage/HomingSpeed"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Homing Speed:"

[node name="SpinBox" type="SpinBox" parent="SettingsPage/HomingSpeed"]
layout_mode = 2
min_value = 1.0
max_value = 99999.0
value = 1000.0
suffix = "steps/sec"

[node name="Window" type="Control" parent="SettingsPage"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 447.0
offset_bottom = 652.0
grow_horizontal = 2
grow_vertical = 2

[node name="AlwaysOnTop" type="Control" parent="SettingsPage/Window"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -81.5
offset_right = -619.0
offset_bottom = -2.5
grow_horizontal = 2
grow_vertical = 2

[node name="CheckBox" type="CheckBox" parent="SettingsPage/Window/AlwaysOnTop"]
layout_mode = 2
offset_top = 2.0
offset_right = 24.0
offset_bottom = 26.0
scale = Vector2(3, 3)
theme_override_font_sizes/font_size = 54

[node name="Label" type="Label" parent="SettingsPage/Window/AlwaysOnTop"]
layout_mode = 0
offset_left = 75.0
offset_top = -1.0
offset_right = 439.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 54
text = "Always on top"

[node name="TransparentBg" type="Control" parent="SettingsPage/Window"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.0
offset_top = 3.5
offset_right = -619.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2

[node name="CheckBox" type="CheckBox" parent="SettingsPage/Window/TransparentBg"]
layout_mode = 2
offset_top = 2.0
offset_right = 24.0
offset_bottom = 26.0
scale = Vector2(3, 3)
theme_override_font_sizes/font_size = 54

[node name="Label" type="Label" parent="SettingsPage/Window/TransparentBg"]
layout_mode = 0
offset_left = 75.0
offset_top = -1.0
offset_right = 721.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 54
text = "Transparent Background"

[node name="AddFile" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("42_p7l1i")

[node name="Label" type="Label" parent="AddFile"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -424.5
offset_top = 14.0
offset_right = 424.5
offset_bottom = 102.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 54
text = "Internal Storage/OSSM Sauce/Paths"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="AddFile"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0723958
anchor_right = 1.0
anchor_bottom = 0.115104
grow_horizontal = 2
theme_override_constants/separation = 175
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AddPath" type="Button" parent="AddFile/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
disabled = true
text = "Add Path"

[node name="LoadPlaylist" type="Button" parent="AddFile/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
disabled = true
text = "Load Playlist"

[node name="Back" type="Button" parent="AddFile/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Back"

[node name="PathListOG" type="ItemList" parent="AddFile"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.140625
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 54
metadata/_edit_use_anchors_ = true

[node name="FileList" type="Panel" parent="AddFile"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.139583
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("43_ypxlb")
metadata/_edit_use_anchors_ = true

[node name="Scroll" type="ScrollContainer" parent="AddFile/FileList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="AddFile/FileList/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="ScrollItem" type="Panel" parent="AddFile/FileList/Scroll/VBox"]
self_modulate = Color(1, 1, 1, 0.701961)
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
script = ExtResource("44_rs8f6")

[node name="Label" type="Label" parent="AddFile/FileList/Scroll/VBox/ScrollItem"]
self_modulate = Color(1, 1, 1, 0.764706)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -37.0
offset_right = 988.0
offset_bottom = 37.0
grow_vertical = 2
theme_override_font_sizes/font_size = 48
clip_text = true
text_overrun_behavior = 3

[node name="Button" type="TextureButton" parent="AddFile/FileList/Scroll/VBox/ScrollItem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="AddFile/FileList/Scroll/VBox/ScrollItem"]
wait_time = 0.5
one_shot = true

[node name="WifiIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(1031, 45)
texture = ExtResource("45_jo84y")
script = ExtResource("42_yfho7")

[node name="Splash" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("46_kew6m")

[node name="Label" type="RichTextLabel" parent="Splash"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.5
offset_top = -818.5
offset_right = 445.5
offset_bottom = 564.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_separation = 0
theme_override_font_sizes/normal_font_size = 54
bbcode_enabled = true
text = "OSSM Sauce is an experimental WebSocket based controller designed to give users maximum control over their OSSM devices.

Extensive testing has been done to ensure reliable performance and safety, however, this app can damage your OSSM and yourself if used carelessly.

It's up to YOU to understand how this app behaves before using it in a live environment.

-Opti"

[node name="DontShow" type="Control" parent="Splash"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 87.0
offset_top = 482.0
offset_right = -459.0
offset_bottom = 561.0
grow_horizontal = 2
grow_vertical = 2

[node name="CheckBox" type="CheckBox" parent="Splash/DontShow"]
layout_mode = 2
offset_top = 2.0
offset_right = 178.0
offset_bottom = 26.0
scale = Vector2(3, 3)
theme_override_font_sizes/font_size = 54

[node name="Label" type="Label" parent="Splash/DontShow"]
layout_mode = 0
offset_left = 75.0
offset_top = -1.0
offset_right = 439.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 54
text = "Don't show again"

[node name="Accept" type="Button" parent="Splash"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -293.0
offset_right = 244.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
text = "ACCEPT"

[node name="ConnectingLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -381.0
offset_top = -76.0
offset_right = 381.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Connecting to network..."
script = ExtResource("45_ndop1")

[connection signal="pressed" from="ActionPanel/Play/Button" to="ActionPanel" method="_on_play_button_pressed"]
[connection signal="pressed" from="ActionPanel/Pause/Button" to="ActionPanel" method="_on_pause_button_pressed"]
[connection signal="pressed" from="ActionPanel/Speed/Button" to="ActionPanel" method="_on_speed_button_pressed"]
[connection signal="pressed" from="ActionPanel/Range/Button" to="ActionPanel" method="_on_range_button_pressed"]
[connection signal="pressed" from="ActionPanel/Menu/Button" to="ActionPanel" method="_on_menu_button_pressed"]
[connection signal="timeout" from="ActionPanel/Timer" to="ActionPanel" method="_on_timer_timeout"]
[connection signal="pressed" from="CircleSelection/OutsideButton" to="CircleSelection" method="_on_outside_button_pressed"]
[connection signal="pressed" from="CircleSelection/InsideButton" to="CircleSelection" method="_on_inside_button_pressed"]
[connection signal="pressed" from="SettingsPage/Back" to="SettingsPage" method="_on_Back_pressed"]
[connection signal="text_changed" from="SettingsPage/Network/Address/TextEdit" to="SettingsPage" method="_on_network_address_text_changed"]
[connection signal="pressed" from="SettingsPage/Network/Connect" to="SettingsPage" method="_on_connect_pressed"]
[connection signal="text_changed" from="SettingsPage/Sliders/MaxSpeed/TextEdit" to="SettingsPage" method="_on_speed_input_changed"]
[connection signal="text_changed" from="SettingsPage/Sliders/MaxAcceleration/TextEdit" to="SettingsPage" method="_on_acceleration_input_changed"]
[connection signal="value_changed" from="SettingsPage/HomingSpeed/SpinBox" to="SettingsPage" method="_on_homing_speed_changed"]
[connection signal="toggled" from="SettingsPage/Window/AlwaysOnTop/CheckBox" to="SettingsPage" method="_on_always_on_top_toggled"]
[connection signal="toggled" from="SettingsPage/Window/TransparentBg/CheckBox" to="SettingsPage" method="_on_transparent_background_toggled"]
[connection signal="pressed" from="AddFile/HBox/AddPath" to="AddFile" method="_on_add_path_pressed"]
[connection signal="pressed" from="AddFile/HBox/LoadPlaylist" to="AddFile" method="_on_load_playlist_pressed"]
[connection signal="pressed" from="AddFile/HBox/Back" to="AddFile" method="_on_back_pressed"]
[connection signal="item_selected" from="AddFile/PathListOG" to="AddFile" method="_on_path_list_item_selected"]
[connection signal="toggled" from="Splash/DontShow/CheckBox" to="Splash" method="_on_dont_show_toggled"]
[connection signal="pressed" from="Splash/Accept" to="Splash" method="_on_accept_pressed"]